--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,9 @@
 /*
  * This is a manifest file that'll be compiled into application.css, which will
  * include all the files listed below.
+ /*
+ * This is a manifest file that'll be compiled into application.css, which will
+ * include all the files listed below.
  * 
  * Any CSS and SCSS file within this directory, lib/assets/stylesheets,
  * vendor/assets/stylesheets, or vendor/assets/stylesheets of plugins, if any,
@@ -51,7 +54,7 @@
     padding: 1em 2em;
     width: 13em;
     background: #141;
-	
+  
     ul {
       padding: 0;
       li {
