--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,11 +19,12 @@
 
 /* START_HIGHLIGHT */
 #banner {
-  background: #9c9;
-  padding: 10px;
+  background: image-url("banner-studio.png") bottom right;
+  padding: 20px;
   border-bottom: 2px solid;
-  font: small-caps 40px/40px "Times New Roman", serif;
-  color: #282;
+  font: small-caps 55px/55px "Times New Roman", serif;
+  color: white;
+  text-shadow: 1px 0 0 #000, 0 -1px #000, 0 1px 0 #000, -1px 0 0 #000;
   text-align: center;
 
   img {
@@ -41,7 +42,7 @@
 }
 
 #columns {
-  background: #141;
+  background: Gainsboro;
 
   #main {
     margin-left: 17em;
@@ -53,14 +54,15 @@
     float: left;
     padding: 1em 2em;
     width: 13em;
-    background: #141;
+    background: White;
+    background-size: cover;
   
     ul {
       padding: 0;
       li {
         list-style: none;
         a {
-          color: #bfb;
+          color: Black;
           font-size: small;
         }
       }
