--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <body class="<%= controller.controller_name %>">
 <!-- START_HIGHLIGHT -->
   <div id="banner">
-    <%= image_tag("logo.png") %>
+    <%= image_tag("")%>
     <%= @page_title || "VisionsPJ" %><!-- <label id="code.depot.e.title"/> -->
   </div>
   <div id="columns">
